Sat Oct 26 08:37:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: 
	- skip PARAM_TOKEN processing default (fix problem inserting text)
	* src/tds/util.c: correct space position in dump

Fri Oct 25 19:36:38 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Bug fix, correctly support numbytes == -1 in dbstrcpy().
	- Bug fix, ensure dest is always NUL terminated in dbstrcpy().
	- Generate SYBENSIP and SYBEBNUM errors in dbstrcpy().

Fri Oct 25 19:10:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Generate SYBESPID error in dbspid().

Fri Oct 25 18:51:32 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/ctpublic.h src/ctlib/ct.c:
	- Add stub for ct_poll().

Fri Oct 25 10:04:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/.indent.pro: use -npcs removing space after function names

Fri Oct 25 00:44:44 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/sybdb.h src/dblib/dblib.c:
	- Implement dbisopt().

Thu Oct 24 23:37:54 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c:
	- Add support for some server-side dboptions.

Thu Oct 24 16:34:30 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c src/ctlib/unittests/t0009.c
	  src/dblib/unittests/t0023.c src/tds/iconv.c src/tds/tdsstring.c
	  src/tds/token.c:
	- Clean up some warnings.

Thu Oct 24 15:42:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Add DBSTRING and DBOPTION structures, and some utility functions
	  to manipulate them,
	- Implement basic DBOPTION functionality for a few
	  client-side options.
	- Add some preliminary infrastructure for server-side options.
	- Use some of the DBPR* client-side options in the db*pr*()
	  data formatting functions.  Still no real DBPRLINELEN support...
	- Fix handling of compute rows in dbprrow() -- support multiple
	  compute columns in the same row.